docs: rewrite README with detailed step-by-step installation guide
- 7-step installation walkthrough (clone → OAuth → env → deploy → access → payment)
- Clear config responsibility split: ENV (OAuth, admin) vs DB (payment, shop)
- Secret generation commands (openssl rand)
- Both standalone and external deploy modes documented
- Local development section